--- a/client/src/Landing/landing.scss
+++ b/client/src/Landing/landing.scss
@@ -1,8 +1,11 @@
-.bgImg{
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-color: #D7BECA;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.bgImg {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-color: #d7beca;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
