--- a/client/src/Landing/landing.scss
+++ b/client/src/Landing/landing.scss
@@ -14,7 +14,7 @@
   }
   h1 {
     overflow: hidden;
-    color: #ebebeb;
+    color: #7C3AED;
     text-align: end;
     border-right: 0.15em solid #1f2937;
     white-space: nowrap;
