--- a/client/src/Team/team.scss
+++ b/client/src/Team/team.scss
@@ -1,24 +1,57 @@
-.team {
-  border-radius: 40px;
-  box-shadow: 4px 8px 10px #ed9255;
-  gap: 20px;
-  margin-top: 7%;
-  padding: 30px;
+.team_parent {
+  background-color: #fff;
+  position: relative;
+  background-size: cover;
+  // background-repeat: no-repeat;
+  background-position: center;
+  background-size: 65%;
 
-  .images {
-    width: 180px;
-    aspect-ratio: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  .team {
+    border-radius: 40px;
+    box-shadow: 4px 8px 10px #ed9255;
+    gap: 20px;
+    padding: 30px;
+    margin: 60px auto 150px;
+
+    .images {
+      width: 180px;
+      aspect-ratio: 1;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border-radius: 150px;
+      background-position: center;
+    }
+
+    p {
+      color: #e08a5a;
+      font-size: 1.4rem;
+      text-align: center;
+      line-height: 30px;
+      opacity: 1;
+      text-transform: uppercase;
+    }
   }
 
-  p {
-    color: #e08a5a;
-    font-size: 1.4rem;
-    text-align: center;
-    line-height: 30px;
-    opacity: 1;
-    text-transform: uppercase;
+  //wave shape
+  .custom-shape-divider-bottom-1683095621 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
   }
+
+  .custom-shape-divider-bottom-1683095621 svg {
+    position: relative;
+    display: block;
+    width: calc(138% + 1.3px);
+    height: 161px;
+  }
+
+  .custom-shape-divider-bottom-1683095621 .shape-fill {
+    fill: #9870dc;
+  }
+  //wave shape
 }
