--- a/client/src/Team/team.scss
+++ b/client/src/Team/team.scss
@@ -11,6 +11,8 @@
     box-shadow: 4px 8px 10px #ed9255;
     gap: 20px;
     padding: 30px;
+    align-items: center;
+    justify-content: center;
     margin: 60px auto 150px;
 
     .images {
@@ -29,6 +31,12 @@
       line-height: 30px;
       opacity: 1;
       text-transform: uppercase;
+    }
+    .person{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
   }
 
