--- a/client/src/Company/company.scss
+++ b/client/src/Company/company.scss
@@ -10,6 +10,7 @@
 
   .company {
     gap: 20px;
+    margin-top: 50px;
     p,
     h2 {
       color: #321a95;
@@ -19,9 +20,7 @@
       opacity: 1;
       margin-left: 20px;
       z-index: 5;
-
     }
-
     h2 {
       font-size: 2.3rem;
       color: #363636;
