--- a/client/src/Team/team.scss
+++ b/client/src/Team/team.scss
@@ -2,15 +2,22 @@
   background-color: #fff;
   position: relative;
   background-size: cover;
-  // background-repeat: no-repeat;
   background-position: center;
   background-size: 65%;
+  h2 {
+    background-image: linear-gradient(45deg, #9f59da, #c75dec);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    font-size: 2.4rem;
+  }
 
   .team {
     border-radius: 40px;
-    box-shadow: 4px 8px 10px #ed9255;
+    // box-shadow: 4px 8px 10px #ed9255;
     gap: 20px;
-    padding: 30px;
+    padding: 20px;
     align-items: center;
     justify-content: center;
     margin: 60px auto 150px;
@@ -25,14 +32,20 @@
     }
 
     p {
-      color: #e08a5a;
+      background-color: #f3ec78;
+      background-image: linear-gradient(45deg, #f3ec78, #af4261);
+      background-size: 100%;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -moz-text-fill-color: transparent;
       font-size: 1.4rem;
       text-align: center;
       line-height: 30px;
       opacity: 1;
       text-transform: uppercase;
     }
-    .person{
+    .person {
       display: flex;
       flex-direction: column;
       align-items: center;
